--- a/botconfig.json
+++ b/botconfig.json
@@ -1,14 +1,14 @@
 {
-    "token": "NjU5OTY2NTY4MDgzNzUwOTMy.XgV_yw.9vxo8Ri3bmbfXiF18jG5y_tupIA",
-    "clientId": "ssw6mekc8hjgdlks0hgh8v1xhfw489",
+    "token": "DISCORD APP TOKEN",
+    "clientId": "TWITCH CLIENTID",
     "debug": false,
     "cluster": "aws",
     "reconnect": true,
     "maxReconnectInterval": 60000,
     "reconnectInterval": 2000,
     "secure": true,
-    "username": "RPBot9000",
-    "password": "oauth:6xrgscvp3z67p9nsyzncnj5ygsfqha",
+    "username": "BOT TWITCH USERNAME",
+    "password": "OAUTH PASSWORD",
     "prefix": "/",
     "botChannel": "rpbot9000",
     "chatBans": "chat-bans",
